--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "chart.js": "^2.9.3",
+    "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
